Revert "ui fixes(scroll bar and about content clipping fixed)"
This reverts commit 148fb2f5f3dd741ec6106f0ac061da452c3e2a0e.

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -119,10 +119,14 @@
 
 
 
+/* Hide Scrollbars */
 .about-page{
-  margin: 0;
-  max-height: 100vh;
+  min-height: 100vh;
+  width: 100vw;
+  overflow: visible;
+  position: relative;
 }
+
 
 .border {
   position: relative; /* Set relative positioning for pseudo-element */
